This this the changelog file for the Pothos Widgets toolkit.

Release 0.1.1 (pending)
==========================

- Updated internal Qwt to version 6.1.1
- Display plotters replot() after legend checkbox change

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos Widgets toolkit.