@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Widgets toolkit.
 Release 0.1.1 (pending)
 ==========================
 
+- Fix null object error when RadioGroup is not toggled
 - Updated internal Qwt to version 6.1.1
 - Display plotters replot() after legend checkbox change
 
